<resources>
    <string name="app_name">GFS Admin</string>
    <string name="welcom_text">Welcome to Giovani CO. Ltd.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_please_wait">Loading please wait...</string>
    <string name="Are_you_sure_do_you_want_to_exit">Are you sure do you want to exit?</string>
    <string name="Missing">Please fill missing fields</string>
    <string name="Internet">Please check internet connection</string>
    <string name="admin_id">admin_id</string>
    <string name="regId">regId</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="profile_pic">profile_pic</string>
    <string name="designation">designation</string>
    <string name="previledges">previledges</string>
    <string name="dept_id">dept_id</string>
    <string name="dept_name">dept_name</string>
    <string name="log_details_id">log_details_id</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="ok">ok</string>
    <string name="network_error">Please check internet connection</string>
    <string name="success">success</string>
    <string name="unable_to_login_please_enter_valid_details">Please enter valid details</string>
    <string name="status_error">Error</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="internal_storage">Internal storage</string>


    <string name="stock_article">Article</string>
    <string name="article_no_t">Article:</string>
    <string name="fabric_type_t">FabricType:</string>
    <string name="pattern">Pattern:</string>
    <string name="occassion_t">Occassion:</string>
    <string name="weave">Weave:</string>
    <string name="composition_t">Composition:</string>
    <string name="pricefullroll_t">Full Roll(per/yds) Price:</string>
    <string name="price1to9_t">1-9.99(per/yds) Price:</string>
    <string name="price10plus_t">10 &amp; Above(per/yds) Price:</string>
    <string name="pricefullrollmtrs_t">Full Roll(per/mtrs) Price:</string>
    <string name="price1to9mtrs_t">1-9.99(per/mtrs) Price:</string>
    <string name="price10plusmtrs_t">10 &amp; Above(per/mtrs) Price:</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="note">NOTE NOT AVAILABLE</string>
    <string name="update">UPDATE</string>

    <string name="note_article">Note:</string>
    <string name="articleCMNgrpTitle">Article Common Group</string>
    <string name="gn">Group Name</string>
    <string name="qn">Quality Name</string>
    <string name="qd">Quality Description</string>
    <string name="addColor">Click on to Add Color </string>
    <string name="addArticle">Click on to Add Fabrics </string>


    <string name="PO">Purchase Order</string>
    <string name="ConPO">Confirm PO</string>
    <string name="factory">Factory</string>
    <string name="BrandName">Brand Name</string>
    <string name="email_staff">Email</string>
    <string name="staff">Staff</string>
    <string name="view">View</string>
    <string name="status">Status:</string>
    <string name="colorCode">ColorCode:</string>
    <string name="qty">Qty</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>


    <string name="findPUG">FIND PUG</string>
    <string name="address">ADDRESS</string>
    <string name="title_activity_list_map">listMap</string>
    <string name="price">Price</string>
    <string name="meter">In Meter</string>
    <string name="yard">In Yard</string>
    <string-array name="selectWare">
        <item>Select WareHouse</item>
    </string-array>
    <string-array name="selectZone">
        <item>Select Zone</item>
    </string-array>
    <string-array name="selectShelf">
        <item>Select Shelf</item>
    </string-array>
    <string-array name="SelectPoid">
        <item></item>
    </string-array>

    <string-array name="vatendi">
        <item>Enable</item>
        <item>Disable</item>
    </string-array>
    <string name="title_activity_poadd_select_customer">POAddSelectCustomer</string>

</resources>
