<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_cmn_art"
    card_view:cardElevation="10dp"
    android:layout_margin="10dp"
    card_view:contentPadding="2dp"
    card_view:cardBackgroundColor="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_cloth"
            android:id="@+id/image"
            />
        <GridLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:columnCount="2"
            android:layout_margin="5dp"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fabric:"
                android:layout_margin="2dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="fabric"
                android:layout_margin="2dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:id="@+id/artNo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Brand Name:"
                android:layout_margin="2dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_no_t"
                android:layout_margin="2dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:id="@+id/brandname"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty"
                android:layout_margin="2dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_no_t"
                android:layout_margin="2dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:id="@+id/qty"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_margin="2dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_no_t"
                android:layout_margin="2dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:id="@+id/status"/>

        </GridLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>