<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_cmn_art"
    card_view:cardElevation="10dp"
    android:layout_margin="10dp"
    card_view:contentPadding="2dp"
    card_view:cardBackgroundColor="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_cloth"
            android:id="@+id/image"
            />
        <GridLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:columnCount="2"
            android:layout_margin="5dp"
            android:layout_gravity="center_vertical"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_margin="2dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_no_t"
                android:layout_margin="2dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:id="@+id/name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_margin="2dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_no_t"
                android:layout_margin="2dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:id="@+id/address"/>




        </GridLayout>


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_black_24dp"
                android:layout_weight="1"
                android:id="@+id/list_mail"
                android:clickable="true"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call_black_24dp"
                android:layout_weight="1"
                android:id="@+id/list_call"
                android:clickable="true"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_black_24dp"
                android:layout_weight="1"
                android:id="@+id/list_share"
                android:clickable="true"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>