<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/editaddgrnd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/layout"
            layout="@layout/layout_action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
            android:id="@+id/scroll">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.obpoo.gfsfabricsoftware.Article.UI.ArticleEdit"
                tools:layout_editor_absoluteY="25dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/gn"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="2dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_height="wrap_content" />
                    <android.support.v7.widget.CardView
                        card_view:cardElevation="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        card_view:cardPreventCornerOverlap="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:clipChildren="false"
                        card_view:cardCornerRadius="3dp"
                        android:clipToPadding="false"
                        android:divider="@android:color/transparent"
                        android:elevation="5dp"
                        tools:ignore="RtlCompat">


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/winv"
                            android:padding="@dimen/padd_10"
                            android:id="@+id/edit_QG"
                            android:layout_height="wrap_content" />
                    </android.support.v7.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/qn"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="2dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_height="wrap_content" />
                    <android.support.v7.widget.CardView
                        card_view:cardElevation="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        card_view:cardPreventCornerOverlap="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:clipChildren="false"
                        card_view:cardCornerRadius="3dp"
                        android:clipToPadding="false"
                        android:divider="@android:color/transparent"
                        android:elevation="5dp"
                        tools:ignore="RtlCompat">


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/winv"
                            android:padding="@dimen/padd_10"
                            android:id="@+id/edit_QN"
                            android:layout_height="wrap_content" />
                    </android.support.v7.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/qd"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="2dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_height="wrap_content" />
                    <android.support.v7.widget.CardView
                        card_view:cardElevation="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        card_view:cardPreventCornerOverlap="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:clipChildren="false"
                        card_view:cardCornerRadius="3dp"
                        android:clipToPadding="false"
                        android:divider="@android:color/transparent"
                        android:elevation="5dp"
                        tools:ignore="RtlCompat">


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/winv"
                            android:padding="@dimen/padd_10"
                            android:id="@+id/edit_QD"
                            android:layout_height="wrap_content" />
                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:id="@+id/colorLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/addArticle"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:padding="2dp"
                            android:textColor="@color/colorPrimary"
                            android:layout_height="wrap_content"
                            android:id="@+id/clickFabrics"/>


                        <com.cunoraz.tagview.TagView xmlns:tagview="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/tagView_add_cmnArt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            tagview:lineMargin="5dp"
                            tagview:tagMargin="5dp">
                        </com.cunoraz.tagview.TagView>

                    </LinearLayout>


                    <Button
                        android:id="@+id/addGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_bg_pink"
                        android:text="Add Group"
                        android:textColor="@color/white"
                        android:layout_margin="5dp"/>

                    <Button
                        android:id="@+id/updateGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_bg_pink"
                        android:text="Update Group"
                        android:textColor="@color/white"
                        android:visibility="gone"
                        android:layout_margin="5dp"/>

                </LinearLayout>



                <ProgressBar
                    android:id="@+id/pbataddArticle"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/card_view"
                    android:visibility="gone"
                    />

            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
